--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 50;
+  z-index: 5000 !important;
   background-color: hsl(var(--background));
   border-bottom: 1px solid hsl(var(--border));
   transition: all 0.3s ease;
