--- a/src/components/FilterBar.module.css
+++ b/src/components/FilterBar.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0 2rem; /* small padding like HouseSigma */
+  padding: 0 2rem; /* small padding like HomeNest/
   max-width: 100%;   /* removes fixed width feeling */
 }
 
