--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -25,7 +25,7 @@
 /* BRAND COLUMN */
 .brandColumn {
   max-width: 300px;   /* increased width for longer description */
-  margin-top: -12px;  /* lifts HouseSigma up */
+  margin-top: -12px;  /* lifts HomeNest up */
 }
 
 .logo {
