--- a/src/components/StatsChart.module.css
+++ b/src/components/StatsChart.module.css
@@ -8,7 +8,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
-/* Smaller title like HouseSigma */
+/* Smaller title like HomeNest */
 .title {
   font-size: 1.3rem;
   font-weight: 600;
